fix: ensure color contrast on next button

--- a/src/index.scss
+++ b/src/index.scss
@@ -240,7 +240,7 @@
   button {
     background-color: #f5f7fc;
     border: none;
-    color: #1a73d9;
+    color: #356bbd;
     cursor: pointer;
     display: inline-block;
     font-size: 1em;
